client/public/css/styles.css
/*==========index.html==========*/



.social {
  height: 50px;
  width: 50px;
  text-align: center;
}
.social:hover {
  -webkit-filter:saturate(2.0);
}
.modal-row {
  margin-bottom: 0;
}


/*=====modal=====*/
modal-content{
  padding-left: 0;
  padding-right: 0;
}

.dactive{
  background: #485B61 !important;
}

/*=====navbar=====*/

.navbar-font-color{
  color:#90caf9;
}


/*=====footer=====*/

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
  }

  main {
    flex: 1 0 auto;
  }

#footer-spacer{
  padding-left: 5em;
}

.footer-row-title{
  color:white;
}
.social-footer{
  height:15px;
  width:15px;
  padding-top: 2px;
}

#responsive-footer-container{
  color:white;
}

#footer{
  margin-top: 0;
}

/*changes background of popped-out portion*/
#footer-collapsible{
  border-color:#424242;

}
/*changes color of non-popped-out collapsible*/
.footer-collapsible-header{
  background-color: #424242;
}

.drop-down-container{
  font-size:12px;
  padding: 5px;
}

.collapsible-content-spacer{
  color:#90caf9;
  padding-left: 1.5em;
  padding-top: .5em;
  padding-bottom: .5em;
}

/*==========landing.html==========*/

/*=====feature-tour=====*/

/*=====how-it-works=====*/

.hiw-button-adjuster{
  margin-top: -.3em;
}

.hiw-responsive-content{
  font-size: 1em;
  text-align: left;
}

#hiw-responsive-header{
  color:white;
  text-align: center;
}

#hiw-shell-container{
  border: 3px solid black;
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
  text-align: center;
}

#hiw-inner-shell{
  margin-bottom:0;
  padding-top:.1em;
  border-bottom:3px solid black;
  background-color: #90caf9;
}

#hiw-inner-container{
  border: 3px solid black;
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
  background-color: white;
}

#how-it-works-container{
  border: 3px solid black;
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
}

#hiw-call-to-action-container{
  padding:.1em 2em .1em;
}

#hiw-responsive-footer{
  padding-top:1.5em;
  padding-bottom: 1.5em;
  margin-bottom: 0;
  background-color: #90caf9;
  border-top: 3px solid black;
}

.how-it-works-contents{
  border-right-style: dashed;
  border-right-width: .1em;
}

.hiw-content-title{
  font-size: 2em;
  margin-bottom: .3em;
}

.hiw-hover-icon{
  margin-top: -2em;
  color: #f57c00;
}

#responsive-parallax{

}

#hiw-large-title{
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
  padding-bottom: .2em;
  margin-bottom: .2em;
  color:black;
}

/*=====FAQ=====*/

.icon-color-modifier{
  color:#f57c00;
}

.faq-outer-panel{
  background-color: #424242;
  color:white;
}

.faq-inner-panel{
  background-color: #424242;
  color:#90caf9;
}

/*=====tech-stack=====*/
#tech-stack-container{
  padding-left: 2em;
}

#tech-stack-outer-shell{
  background-color: #424242;
  color:#90caf9
}

/*=====team-intro cards=====*/
.card-reveal-content{
  font-size:.8em;
}

/*changes size of p-content below card title*/
.card-content{
  font-size:.8em;
}

.card-spacer{
  padding-top: .4em;
}

.card-title-sizer{
  font-size:1em;
}

#team-intro-card-holder{
  padding-top: 2em;
  margin-bottom: 0;
  padding-bottom: 2em;
  background-color: #90caf9;
}

/*will equally space all cards along a given screen width*/
/*.card-container{
  display:flex;
  justify-content:space-between;
}*/

.dev-team{
  text-align: center;
}

.collection-item.avatar {
  height: 60px;
  width: 60px;
}

/*===========recipes===========*/
.button-add {
  margin-top: 30px;
}

.price {
  float:right;
  font-size:16px;
  color:green;
}

.card-small {
  min-width: 250px;
}

.container .ng-scope {
  width: 100%;
}

.material-icons {
  font-size: 2em;
}

.search-bar{
  width: 30%;
}
/*========create-recipes=========*/

.addButton {
  position:relative;
  min-height:50px;
}

.bottom {
  position:absolute;
  bottom:0;
  left:0;
}

.trash-small {
  height:18px;
  width:18px;
}

.trash-icon-small {
  font-size:16px;
  position:relative;
  bottom:13px;
}

/*========shopping-list=========*/

.quantity {
  width:50px;
}

.priceForm {
  display:inline-block;
}

.list-price {
  color: green;
}

/*============fridge============*/

.bottom-right {
  bottom: 45px;
  right: 24px;
}

.minus {
  position:relative;
  bottom:12px;
}

.minus-small {
  height:12px;
  width:12px;
}

#expire-message {
  color:red;
  width:20%;
}

